Change title of website

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
 
-    <title>OSS</title>
+    <title>BIRS 2023 Workshop</title>
     <!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> -->
     <link rel="stylesheet" href="css/pico/pico.min.css" media="all" />
     <link rel="stylesheet" href="css/fontawesome/css/all.min.css" media="all" />
