Add link to event in Birs website

--- a/index.html
+++ b/index.html
@@ -117,6 +117,18 @@
                   >), Alberta, Canada
                 </span>
               </li>
+              <li>
+                <i class="fa-li fa-solid fa-calendar"></i>
+                <strong>More information</strong>
+                <br />
+                <span
+                  >See
+                  <a
+                    href="https://www.birs.ca/events/2023/2-day-workshops/23w2014"
+                    >event in Birs website</a
+                  ></span
+                >
+              </li>
             </ul>
           </div>
         </div>
